--- a/freebie.html
+++ b/freebie.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar bar3"></span>
                 </button>
                 <a href="http://www.creative-tim.com" class="navbar-brand">
-                    <img src="assets/img/logoir.png" alt="Smiley face"style="width:22%;">
+                    <img src="assets/img/irr.png" alt="Smiley face"style="width:80%;">
                 </a>
             </div>
             <div class="collapse navbar-collapse">
@@ -231,7 +231,7 @@
                         <h4>Investors</h4>
                         <p class="description" style="text-align:left;">Pick Investments yourself, diversify and lend to the top rated companies in Africa at rates that suit you and them. Make your money work for you inorder to make returns and see companies develop and grow.</p></br>
                          <div class="row center">
-                    <a href="investor.html" id="download-button" class="btn btn-danger btn-fill btn-lg">Start Investing</a>
+                    <a href="investordetail.html" id="download-button" class="btn btn-danger btn-fill btn-lg">Start Investing</a>
                   </div></br>
                    <div class="container">
              <div class="row">
